intermediate commit before moving to electron with webpack

--- a/src/MainWindow/index.html
+++ b/src/MainWindow/index.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8" />
         <title>Cgf.CameraControl.Main.Gui</title>
         <link rel="stylesheet" href="index.css" />
+        <script type="text/javascript" src="../../dist/MainWindow/MainWindow.js"></script>
     </head>
     <body>
-        <p>Dummy content -> view log</p>
+        <h1>Log</h1>
+        <div id="logs"></div>
     </body>
 </html>
